--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ about: 'about.html'
 
 
             {% if post.author_name %}
-                <img class="author-thumb" src="/assets/images/profile.png" alt="Author's profile picture" nopin="nopin" />
+                <img class="author-thumb" src="{% if post.author_image %}{{ post.author_image}}{% else %}/assets/images/profile.png{% endif %}" alt="Author's profile picture" nopin="nopin" />
                 {{ post.author_name }}
             {% elsif site.author %}
                 <img class="author-thumb" src="/assets/images/profile.png" alt="Author's profile picture" nopin="nopin" />
