--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 cover: false
 about: 'about.html'
-cover: '/assets/images/cover.png'
+cover: '/assets/images/cover.jpg'
 ---
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
