--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 title: Home
-cover: true
 about: 'about.html'
 ---
 
-<header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
+<header class="main-header {% if site.cover %}" style="background-image: url({{ site.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
             {% if page.logo %}
                 <a class="blog-logo" href="{{ site.baseurl }}">
