--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ about: 'about.html'
                 </a>
             {% endif %}
         <a class="subscribe-button icon-feed" href="{{ site.baseurl }}rss.xml">Subscribe</a>
+        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}rss.xml">Fork</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
