--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ about: 'about.html'
                 </a>
             {% endif %}
         <a class="subscribe-button icon-feed" href="{{ site.baseurl }}rss.xml">Subscribe</a>
-        <a class="fork-button icon-feed" href="https://github.com/rndblog/rndblog.github.io">Fork</a>
+        <a class="subscribe-button icon-feed" href="https://github.com/rndblog/rndblog.github.io">Fork</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
